__makenew: use calloc to get zeroed memory for window contents.

PR lib/56767.